--- a/_layouts/static.yml
+++ b/_layouts/static.yml
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="alternate" type="application/atom+xml" href="/feeds/atom.xml" />
+<link rel="alternate" type="application/rss+xml" href="/feeds/rss.xml" />
+
 {% include style.html %}
 <title>Darknoon: {{ page.title }}</title>
 </head>
