--- a/_layouts/post.yml
+++ b/_layouts/post.yml
@@ -11,7 +11,12 @@
 {% include navigation.textile %}
 
 <div id="content">
+
+{% if page.link %}
+<h1><a href="{{ page.link }}">Linked: {{ page.title }}</a></h1>
+{% else %}
 <h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
+{% endif %}
 
 <p class="date">{{ page.date | date: "%B %d %Y"  }}</p>
 
