--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "url-polyfill": "^1.1.3"
   },
   "repository": {
     "type": "git",
