--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "url": "^0.11.0"
   },
   "keywords": [
     "gatsby"
