--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "build": "gatsby build",
     "now-build": "npm run build",
+    "dev": "gatsby develop",
     "develop": "gatsby develop",
     "deploy": "gatsby build; cd public; now",
     "format": "prettier --write \"src/**/*.js\"",
