--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "1.0.0",
   "author": "Andrew Pouliot <andrew@darknoon.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/react": "^1.5.5",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.7",
