--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "@mdx-js/react": "^1.6.19",
     "@types/mdx-js__react": "^1.5.3",
+    "date-fns": "^2.16.1",
+    "gray-matter": "^4.0.2",
     "next": "10.0.1-canary.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "keywords": [
     "gatsby"
