--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/mdx-js__react": "^1.5.3",
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
-    "next": "10.0.1-canary.6",
+    "next": "10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
