--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
+    "remark-excerpt": "^1.0.0-beta.1",
     "remark-html": "^13.0.1"
   },
   "keywords": [
