--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+.DS_Store
+
 # Project dependencies
-.next
-.cache
 node_modules
 yarn-error.log
 
 # Build directory
-.DS_Store
+.next
+.cache
+out
