--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "2.0.0",
   "author": "Andrew Pouliot <andrew@darknoon.com>",
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.5.0",
     "@mdx-js/loader": "^1.6.21",
     "@mdx-js/react": "^1.6.19",
     "@next/mdx": "^10.0.1",
@@ -14,9 +15,7 @@
     "next": "10.0.1",
     "next-mdx-remote": "^1.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "react-dom": "^17.0.1"
   },
   "keywords": [
     "gatsby"
