--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "version": "2.0.0",
   "author": "Andrew Pouliot <andrew@darknoon.com>",
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.5.0",
-    "@mdx-js/loader": "^1.6.21",
-    "@mdx-js/react": "^1.6.19",
-    "@next/mdx": "^10.0.1",
-    "@types/mdx-js__react": "^1.5.3",
-    "@types/react-dom": "^16.9.9",
-    "date-fns": "^2.16.1",
-    "gray-matter": "^4.0.2",
-    "next": "10.0.1",
-    "next-mdx-remote": "^1.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^12.0.9",
+    "@types/react-dom": "^17.0.11",
+    "date-fns": "^2.28.0",
+    "gray-matter": "^4.0.3",
+    "next": "12.0.9",
+    "next-mdx-remote": "^3.0.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sharp": "^0.29.3"
   },
   "keywords": [
     "gatsby"
@@ -30,10 +30,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
-    "prettier": "^1.14.2",
-    "typescript": "^4.0.5"
+    "@types/node": "^17.0.13",
+    "@types/react": "^17.0.38",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   },
   "repository": {
     "type": "git",
